backups/k8s/2026-01-09/app.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"backend"},"name":"backend","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"backend"}},"template":{"metadata":{"labels":{"app":"backend"}},"spec":{"containers":[{"image":"ghcr.io/presianrusinov/k8s-app-backend:latest","name":"backend","ports":[{"containerPort":5000}]}]}}}}
    creationTimestamp: "2025-12-06T08:13:14Z"
    generation: 1
    labels:
      app: backend
    name: backend
    namespace: default
    resourceVersion: "102715"
    uid: d423bb64-d1c6-4109-9741-25337487a6ab
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: backend
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: backend
      spec:
        containers:
        - image: ghcr.io/presianrusinov/k8s-app-backend:latest
          imagePullPolicy: Always
          name: backend
          ports:
          - containerPort: 5000
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2025-12-06T08:17:28Z"
      lastUpdateTime: "2025-12-06T08:17:28Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2025-12-06T08:13:14Z"
      lastUpdateTime: "2025-12-06T08:17:28Z"
      message: ReplicaSet "backend-6b58bb88fc" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 1
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"backend","namespace":"default"},"spec":{"ports":[{"port":5000,"targetPort":5000}],"selector":{"app":"backend"},"type":"ClusterIP"}}
    creationTimestamp: "2025-12-06T08:13:15Z"
    name: backend
    namespace: default
    resourceVersion: "102478"
    uid: 4944718c-6fe7-4615-ad36-e456c2ed6639
  spec:
    clusterIP: 10.43.48.98
    clusterIPs:
    - 10.43.48.98
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
    selector:
      app: backend
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2025-12-04T07:17:11Z"
    labels:
      component: apiserver
      provider: kubernetes
    name: kubernetes
    namespace: default
    resourceVersion: "43"
    uid: cf0aa118-c21c-4f9c-8a22-60804c74ae9c
  spec:
    clusterIP: 10.43.0.1
    clusterIPs:
    - 10.43.0.1
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 6443
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/rewrite-target":"/"},"name":"backend","namespace":"default"},"spec":{"ingressClassName":"nginx","rules":[{"host":"myk8s-presiyan.duckdns.org","http":{"paths":[{"backend":{"service":{"name":"backend","port":{"number":5000}}},"path":"/","pathType":"Prefix"}]}}]}}
      nginx.ingress.kubernetes.io/rewrite-target: /
    creationTimestamp: "2025-12-06T08:13:15Z"
    generation: 1
    name: backend
    namespace: default
    resourceVersion: "102492"
    uid: c8885aa8-2d72-450b-aa15-f3f471d34ce5
  spec:
    ingressClassName: nginx
    rules:
    - host: myk8s-presiyan.duckdns.org
      http:
        paths:
        - backend:
            service:
              name: backend
              port:
                number: 5000
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: 46.224.36.151
kind: List
metadata:
  resourceVersion: ""
